# csc371-rust-remake

./: .gitignore  Cargo.toml  README.md
src/: _371pass.rs  app.rs  category.rs  error.rs  item.rs  lib.rs  main.rs  wallet.rs
tests/: test1.rs  testdatabase.json  testdatabasealt.json  testsave.json
