[package]
name = "csc371_remake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.0", features = ["derive"] }
getopts = "0.2.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.49"
unescape = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
